# common_srv

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: ROSUnit.hpp  ROSUnit_EmptySrv.hpp  ROSUnit_Factory.hpp  ROSUnit_GetFloatClnt.hpp  ROSUnit_GetFloatSrv.hpp  ROSUnit_GetPosesClnt.hpp  ROSUnit_GetPosesSrv.hpp  ROSUnit_GetTaggedPosesClnt.hpp  ROSUnit_GetTaggedPosesSrv.hpp  ROSUnit_SetFloatClnt.hpp  ROSUnit_SetFloatSrv.hpp  ROSUnit_SetIntClnt.hpp  ROSUnit_SetIntSrv.hpp  ROSUnit_SetPointClnt.hpp  ROSUnit_SetPointSrv.hpp  ROSUnit_SetPointsSrv.hpp  ROSUnit_SetPoseSrv.hpp  ROSUnit_SetPosesClnt.hpp  ROSUnit_SetPosesSrv.hpp  ROSUnit_SetVectorClnt.hpp  ROSUnit_SetVectorSrv.hpp  ROSUnit_UpdateFloatClnt.hpp  ROSUnit_UpdateFloatSrv.hpp  ROSUnit_UpdatePosesClnt.hpp  ROSUnit_UpdatePosesSrv.hpp  ROSUnit_UpdateTaggedPosesClnt.hpp  ROSUnit_UpdateTaggedPosesSrv.hpp  Vector3D.hpp  common_types.hpp
include/common_srv/: Block.hpp  BooleanMsg.hpp  DataMessage.hpp  DoubleMsg.hpp  EmptyMsg.hpp  FloatMsg.hpp  InputPort.hpp  IntegerMsg.hpp  MsgEmitter.hpp  MsgReceiver.hpp  OutputPort.hpp  PointsMsg.hpp  Port.hpp  PoseMsg.hpp  Poses.hpp  PosesMsg.hpp  ROSUnit.hpp  ROSUnit_EmptyClnt.hpp  ROSUnit_EmptySrv.hpp  ROSUnit_Factory.hpp  ROSUnit_FloatPub.hpp  ROSUnit_FloatSub.hpp  ROSUnit_Point2DPub.hpp  ROSUnit_Point2DSub.hpp  ROSUnit_PointPub.hpp  ROSUnit_PointSub.hpp  ROSUnit_PointUint64Pub.hpp  ROSUnit_PointUint64Sub.hpp  ROSUnit_SetFloatClnt.hpp  ROSUnit_SetFloatSrv.hpp  ROSUnit_SetIntClnt.hpp  ROSUnit_SetIntSrv.hpp  ROSUnit_SetPointClnt.hpp  (+21 more)
src/: Block.cpp  BooleanMsg.cpp  DataMessage.cpp  DoubleMsg.cpp  EmptyMsg.cpp  FloatMsg.cpp  InputPort.cpp  IntegerMsg.cpp  MsgEmitter.cpp  MsgReceiver.cpp  OutputPort.cpp  PointsMsg.cpp  Port.cpp  PoseMsg.cpp  PosesMsg.cpp  ROSUnit.cpp  ROSUnit_EmptyClnt.cpp  ROSUnit_EmptySrv.cpp  ROSUnit_Factory.cpp  ROSUnit_FloatPub.cpp  ROSUnit_FloatSub.cpp  ROSUnit_GetFloatClnt.cpp  ROSUnit_GetFloatSrv.cpp  ROSUnit_GetPosesClnt.cpp  ROSUnit_GetPosesSrv.cpp  ROSUnit_GetTaggedPosesClnt.cpp  ROSUnit_GetTaggedPosesSrv.cpp  ROSUnit_Point2DPub.cpp  ROSUnit_Point2DSub.cpp  ROSUnit_PointPub.cpp  ROSUnit_PointSub.cpp  ROSUnit_PointUint64Pub.cpp  ROSUnit_PointUint64Sub.cpp  ROSUnit_SetFloatClnt.cpp  ROSUnit_SetFloatSrv.cpp  ROSUnit_SetIntClnt.cpp  ROSUnit_SetIntSrv.cpp  ROSUnit_SetPointClnt.cpp  ROSUnit_SetPointSrv.cpp  ROSUnit_SetPointsClnt.cpp  (+22 more)
(+44 files in other folders)
